--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+  "name": "my-package",
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
   }
 }
